0.8
	Targets:
		- Inline tags eg. @deprecated As of some date, replaced by {@link #newMethod()}
		- Improve default template look for --developer and typedefs
			(check js.Checkbox fields, which are "available in all platforms")(Franco)
		- Add --showSourceFilePath for hard link to source files
		- Import docs for methods etc. in classes if they implement an interface
			 and have no docs
0.7.3
	- FIXED: Populating ClassCtx.superClasses
	-CHANGE: Added show/hide inherited to member vars and member methods
	- FIXED: --writeWebConfig requiring template macro file to exist
0.7.2
	- FIXED : Tag detection EReg in DocProcessor
0.7.1
	-CHANGE: Copying required files to src/chx for

0.7 2009-01-19
	- ADDED MOD_NEKO support.
	-CHANGE Now requires caffeine-hx /ext2 in classpath
	- ADDED --xmlBasePath and --writeWebConfig
	- ADDED (476): -v verbose flag for output
	-CHANGE (476): 'platform' global now called config in .mtt
	- FIXED (476): package and type filtering
	- FIXED (474): Extensive work on sorting and displaying Typedefs
	- FIXED (474): Improper handling of --footerText embedded =

0.6 2009-01-14
	- FIXED: Constructors not getting docs.
	- FIXED: Template for typedefs showing wrong platforms
	- FIXED: Templates not showing platforms for members
	- ADDED: --footerText and --footerTextFile switches for adding raw html to Types pages
	- ADDED: --generateTodo flag for making /todo.html
	- ADDED: @author [raw]
	- ADDED: @requires tag for Type or Function requirements (ie. specific neko ndll, etc)
	- ADDED: @see [path]
	- ADDED: @todo tag and todo.html file generation
	- ADDED: @type [name] [description] for type params (ie function blah<T>)

	- CHANGE: Moved Root Types to top of packages in all_packages.mtt
	- CHANGE: Improved tag detection in method/var/class documentation
	- The current available tags are:
	@author
	@deprecated
	@param
	@requires
	@return (or @returns)
	@see
	@throws
	@todo
	@type


0.5 2009-01-12